add BookingController